@@ -38,12 +38,15 @@ if $is_xml; then
       --stringparam gtkdoc.bookname $module \
       --stringparam gtkdoc.version "@VERSION@" \
       $gtkdocdir/gtk-doc.xsl $document
-  cp -f $gtkdocdir/*.png .
 else
   @JADE@ -t sgml -w no-idref -d $gtkdocdir/gtk-doc.dsl \
       -V "gtkdoc-bookname=$module" -V "gtkdoc-version=@VERSION@" \
       $gtkdocdir/gtk-doc.dcl $document
 fi
+
+# copy navigation images to html directory ...
+cp -f $gtkdocdir/*.png .
+
 
 echo "timestamp" > ../html.stamp
 
