@@ -1,3 +1,11 @@
+2002-11-29  James Henstridge  <james@daa.com.au>
+
+	* gtkdoc-mkhtml.in: copy the navigation images for both XML and
+	SGML cases.
+
+	* gtk-doc.dsl.in: update DSSSL stylesheets to match layout of XSL
+	ones.
+
 2002-11-29  Matthias Clasen  <maclas@gmx.de>
 
 	* gtkdoc-scan.in (ScanHeader): Make deprecation guards work with
